Small corrections on mobile view

--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ p {
 }
 
 #qr-container p:first-of-type {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .flip-btn {
